--- a/WorkPermitSystem/Views/Shared/_Layout.cshtml
+++ b/WorkPermitSystem/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@{
+    // use current controller or area to determine if tab is active
+    var current = ViewContext.RouteData.Values["area"]?.ToString() ??
+      ViewContext.RouteData.Values["controller"]?.ToString();
+}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -19,12 +24,48 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+                        <li class="nav-item @WorkPermitSystem.Models.ViewModels.Nav.Active("Home", current)">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+
+                        @using Microsoft.AspNetCore.Identity
+                        @inject SignInManager<WorkPermitSystem.Models.DomainModels.User> signInManager
+          @if (signInManager.IsSignedIn(User))
+          {
+            // signed-in user - Log Out button and username
+            <li class="nav-item">
+              <form method="post" asp-controller="Account" asp-action="LogOut" asp-area="">
+                <input type="submit" value="Log Out" class="btn btn-outline-light" />
+                <span class="text-light">@User.Identity.Name</span>
+              </form>
+            </li>
+
+            <li class="nav-item  @WorkPermitSystem.Models.ViewModels.Nav.Active("Permit", current)">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Permit" asp-action="Create">Privacy</a>
+            </li>
+
+            <li class="nav-item  @WorkPermitSystem.Models.ViewModels.Nav.Active("Permit", current)">
+                <a class="nav-link text-dark" asp-area="Aprover" asp-controller="Permit" asp-action="Index">Privacy</a>
+            </li>
+          }
+          else
+          {
+            var action = ViewContext.RouteData.Values["action"]?.ToString();
+
+            // anonymous user - Register link and Log In button
+                            <li class="nav-item @WorkPermitSystem.Models.ViewModels.Nav.Active("Register",action)">
+              <a asp-controller="Account" asp-action="Register" asp-area="" class="nav-link">
+                <span class="fas fa-edit"></span>&nbsp;Register
+              </a>
+            </li>
+            <li class="nav-item">
+              <a asp-controller="Account" asp-action="Login" asp-area="" class="btn btn-outline-light">Log In</a>
+            </li>
+          }
+
                     </ul>
                 </div>
             </div>
